--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://HarveyHermawan.github.io/suitmedia",
   "name": "suitmedia",
   "private": true,
   "version": "0.0.0",
@@ -6,6 +7,8 @@
   "proxy": "https://suitmedia-backend.suitdev.com/api/ideas",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
